--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-config-next": "13.1.6",
     "ethers": "5.7.2",
     "next": "13.1.6",
+    "rc-progress": "^3.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-drag-drop-files": "^2.3.8",
