--- a/package.json
+++ b/package.json
@@ -1,32 +1,36 @@
 {
-  "name": "skyee",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@livepeer/react": "^2.1.5",
-    "@next/font": "13.1.6",
-    "@types/node": "18.13.0",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.33.0",
-    "eslint-config-next": "13.1.6",
-    "ethers": "5.7.2",
-    "next": "13.1.6",
-    "rc-progress": "^3.4.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-drag-drop-files": "^2.3.8",
-    "react-player": "2.11.0",
-    "typescript": "4.9.5"
-  },
-  "devDependencies": {
-    "prettier": "^2.8.4",
-    "sass": "^1.58.0"
-  }
+    "name": "skyee",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "typegen": "pocketbase-typegen --db ./db/pb_data/data.db",
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@livepeer/react": "^2.1.5",
+        "@next/font": "13.1.6",
+        "@types/node": "18.13.0",
+        "@types/react": "18.0.27",
+        "@types/react-dom": "18.0.10",
+        "eslint": "8.33.0",
+        "eslint-config-next": "13.1.6",
+        "ethers": "5.7.2",
+        "next": "13.1.6",
+        "pocketbase": "^0.10.1",
+        "rc-progress": "^3.4.1",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "react-drag-drop-files": "^2.3.8",
+        "react-icons": "^4.7.1",
+        "react-player": "2.11.0",
+        "typescript": "4.9.5"
+    },
+    "devDependencies": {
+        "pocketbase-typegen": "^1.1.4",
+        "prettier": "^2.8.4",
+        "sass": "^1.58.0"
+    }
 }
