--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "pocketbase": "^0.10.1",
         "rc-progress": "^3.4.1",
         "react": "18.2.0",
+        "react-blockies": "^1.4.1",
         "react-dom": "18.2.0",
         "react-drag-drop-files": "^2.3.8",
         "react-icons": "^4.7.1",
@@ -29,6 +30,7 @@
         "typescript": "4.9.5"
     },
     "devDependencies": {
+        "@types/react-blockies": "^1.4.1",
         "pocketbase-typegen": "^1.1.4",
         "prettier": "^2.8.4",
         "sass": "^1.58.0"
