--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "@types/node": "18.13.0",
         "@types/react": "18.0.27",
         "@types/react-dom": "18.0.10",
+        "axios": "^1.3.3",
         "eslint": "8.33.0",
         "eslint-config-next": "13.1.6",
         "ethers": "5.7.2",
@@ -26,6 +27,7 @@
         "react-dom": "18.2.0",
         "react-drag-drop-files": "^2.3.8",
         "react-icons": "^4.7.1",
+        "react-loader-spinner": "^5.3.4",
         "react-player": "2.11.0",
         "typescript": "4.9.5"
     },
